# exam_rank03

./: .gitignore  CMakeLists.txt
ft_printf/: ft_printf.c  main.c  test.sh
get_next_line/: get_next_line.c  get_next_line.h  main.c
micro_paint/: micro_paint.c  subject.ru.txt
